--- a/assets/style.css
+++ b/assets/style.css
@@ -1189,6 +1189,18 @@ html {
     }
   }
 
+  .btn-outline.btn-success:hover {
+    --tw-text-opacity: 1;
+    color: var(--fallback-suc,oklch(var(--suc)/var(--tw-text-opacity)));
+  }
+
+  @supports (color: color-mix(in oklab, black, black)) {
+    .btn-outline.btn-success:hover {
+      background-color: color-mix(in oklab, var(--fallback-su,oklch(var(--su)/1)) 90%, black);
+      border-color: color-mix(in oklab, var(--fallback-su,oklch(var(--su)/1)) 90%, black);
+    }
+  }
+
   .btn-disabled:hover,
     .btn[disabled]:hover,
     .btn:disabled:hover {
@@ -1359,12 +1371,35 @@ html {
     background-color: var(--btn-color, var(--fallback-b2));
     border-color: var(--btn-color, var(--fallback-b2));
   }
+
+  .btn-success {
+    --btn-color: var(--fallback-su);
+  }
+}
+
+@supports (color: color-mix(in oklab, black, black)) {
+  .btn-outline.btn-success.btn-active {
+    background-color: color-mix(in oklab, var(--fallback-su,oklch(var(--su)/1)) 90%, black);
+    border-color: color-mix(in oklab, var(--fallback-su,oklch(var(--su)/1)) 90%, black);
+  }
 }
 
 .btn:focus-visible {
   outline-style: solid;
   outline-width: 2px;
   outline-offset: 2px;
+}
+
+@supports (color: oklch(0 0 0)) {
+  .btn-success {
+    --btn-color: var(--su);
+  }
+}
+
+.btn-success {
+  --tw-text-opacity: 1;
+  color: var(--fallback-suc,oklch(var(--suc)/var(--tw-text-opacity)));
+  outline-color: var(--fallback-su,oklch(var(--su)/1));
 }
 
 .btn.glass {
@@ -1393,6 +1428,16 @@ html {
 .btn-ghost.btn-active {
   border-color: transparent;
   background-color: var(--fallback-bc,oklch(var(--bc)/0.2));
+}
+
+.btn-outline.btn-success {
+  --tw-text-opacity: 1;
+  color: var(--fallback-su,oklch(var(--su)/var(--tw-text-opacity)));
+}
+
+.btn-outline.btn-success.btn-active {
+  --tw-text-opacity: 1;
+  color: var(--fallback-suc,oklch(var(--suc)/var(--tw-text-opacity)));
 }
 
 .btn.btn-disabled,
@@ -1737,6 +1782,20 @@ html {
   --animation-input: 0;
 }
 
+.btn-lg {
+  height: 4rem;
+  min-height: 4rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-size: 1.125rem;
+}
+
+.btn-square:where(.btn-lg) {
+  height: 4rem;
+  width: 4rem;
+  padding: 0px;
+}
+
 .btn-circle:where(.btn-xs) {
   height: 1.5rem;
   width: 1.5rem;
@@ -1803,6 +1862,13 @@ html:has(.drawer-toggle:checked) {
 .drawer-open > .drawer-toggle ~ .drawer-side > .drawer-overlay {
   cursor: default;
   background-color: transparent;
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateY(1em) scale(1);
+    opacity: 0;
+  }
 }
 
 .container-content {
@@ -2149,6 +2215,13 @@ html:has(.drawer-toggle:checked) {
   line-height: 1.5rem;
 }
 
+@media (min-width: 1024px) {
+  .nav-links {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
 .drawer-links {
   display: inline-flex;
   height: 3rem;
@@ -2423,14 +2496,47 @@ html:has(.drawer-toggle:checked) {
   margin: 0px;
   width: 100%;
   justify-content: flex-start;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+@media (min-width: 1024px) {
+  .drawer-links {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
 }
 
 .sticky {
   position: sticky;
 }
 
+.bottom-\[10\%\] {
+  bottom: 10%;
+}
+
+.right-\[40px\] {
+  right: 40px;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .z-50 {
@@ -2441,41 +2547,37 @@ html:has(.drawer-toggle:checked) {
   z-index: 500;
 }
 
-.m-0 {
-  margin: 0px;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mt-0 {
-  margin-top: 0px;
 }
 
 .mb-0 {
   margin-bottom: 0px;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
+.mt-0 {
+  margin-top: 0px;
 }
 
 .mt-9 {
   margin-top: 2.25rem;
 }
 
+.me-auto {
+  margin-inline-end: auto;
+}
+
 .flex {
   display: flex;
 }
 
-.h-screen {
-  height: 100vh;
+.aspect-\[225\/179\] {
+  aspect-ratio: 225/179;
+}
+
+.aspect-video {
+  aspect-ratio: 16 / 9;
 }
 
 .min-h-full {
@@ -2486,12 +2588,25 @@ html:has(.drawer-toggle:checked) {
   width: 20rem;
 }
 
+.w-\[calc\(66\.666\%_-_40px\)\] {
+  width: calc(66.666% - 40px);
+}
+
 .w-full {
   width: 100%;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .max-w-full {
   max-width: 100%;
+}
+
+.grow {
+  flex-grow: 1;
 }
 
 .flex-col {
@@ -2500,6 +2615,10 @@ html:has(.drawer-toggle:checked) {
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -2526,6 +2645,22 @@ html:has(.drawer-toggle:checked) {
   gap: 0.5rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-16 {
+  gap: 4rem;
+}
+
+.gap-y-10 {
+  row-gap: 2.5rem;
+}
+
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -2538,6 +2673,10 @@ html:has(.drawer-toggle:checked) {
   border-radius: 0.125rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .bg-base-100 {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity)));
@@ -2546,6 +2685,37 @@ html:has(.drawer-toggle:checked) {
 .bg-neutral-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
+
+.bg-teal-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity));
+}
+
+.bg-teal-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+}
+
+.bg-teal-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(20 184 166 / var(--tw-bg-opacity));
+}
+
+.bg-\[url\(\/assets\/images\/hero\.svg\)\] {
+  background-image: url(/assets/images/hero.svg);
+}
+
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-top {
+  background-position: top;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
 }
 
 .fill-current {
@@ -2565,12 +2735,13 @@ html:has(.drawer-toggle:checked) {
   padding-bottom: 1rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
-.text-center {
-  text-align: center;
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-end {
@@ -2582,6 +2753,11 @@ html:has(.drawer-toggle:checked) {
   line-height: 2rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
@@ -2591,9 +2767,33 @@ html:has(.drawer-toggle:checked) {
   font-weight: 700;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
+.text-amber-500 {
+  --tw-text-opacity: 1;
+  color: rgb(245 158 11 / var(--tw-text-opacity));
+}
+
 .text-base-100 {
   --tw-text-opacity: 1;
   color: var(--fallback-b1,oklch(var(--b1)/var(--tw-text-opacity)));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-base-300 {
+  --tw-text-opacity: 1;
+  color: var(--fallback-b3,oklch(var(--b3)/var(--tw-text-opacity)));
 }
 
 .shadow-lg {
@@ -2618,6 +2818,24 @@ html:has(.drawer-toggle:checked) {
   transition-duration: 150ms;
 }
 
+.text-shadow {
+  --text-shadow: oklch(var(--b1));
+  text-shadow: 
+        /* first layer at 1px */ -1px -1px 0px var(--text-shadow), 0px -1px 0px var(--text-shadow), 1px -1px 0px var(--text-shadow), -1px 0px 0px var(--text-shadow), 1px 0px 0px var(--text-shadow), -1px 1px 0px var(--text-shadow), 0px 1px 0px var(--text-shadow), 1px 1px 0px var(--text-shadow), /* second layer at 2px */ -2px -2px 0px var(--text-shadow), -1px -2px 0px var(--text-shadow), 0px -2px 0px var(--text-shadow), 1px -2px 0px var(--text-shadow), 2px -2px 0px var(--text-shadow), 2px -1px 0px var(--text-shadow), 2px 0px 0px var(--text-shadow), 2px 1px 0px var(--text-shadow), 2px 2px 0px var(--text-shadow), 1px 2px 0px var(--text-shadow), 0px 2px 0px var(--text-shadow), -1px 2px 0px var(--text-shadow), -2px 2px 0px var(--text-shadow), -2px 1px 0px var(--text-shadow), -2px 0px 0px var(--text-shadow), -2px -1px 0px var(--text-shadow);
+}
+
+.hover\:bg-inherit:hover {
+  background-color: inherit;
+}
+
+.hover\:bg-current:hover {
+  background-color: currentColor;
+}
+
+.hover\:bg-opacity-90:hover {
+  --tw-bg-opacity: 0.9;
+}
+
 @media not all and (min-width: 1024px) {
   .max-lg\:hidden {
     display: none;
@@ -2635,10 +2853,6 @@ html:has(.drawer-toggle:checked) {
 }
 
 @media (min-width: 640px) {
-  .sm\:hidden {
-    display: none;
-  }
-
   .sm\:justify-between {
     justify-content: space-between;
   }
@@ -2650,37 +2864,90 @@ html:has(.drawer-toggle:checked) {
 }
 
 @media (min-width: 768px) {
-  .md\:hidden {
-    display: none;
-  }
-
   .md\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
   }
 
-  .md\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
+  .md\:pt-5 {
+    padding-top: 1.25rem;
   }
 }
 
 @media (min-width: 1024px) {
+  .lg\:bottom-0 {
+    bottom: 0px;
+  }
+
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:aspect-\[225\/179\] {
+    aspect-ratio: 225/179;
+  }
+
+  .lg\:aspect-\[4\/7\] {
+    aspect-ratio: 4/7;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
+  .lg\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .lg\:flex-row {
     flex-direction: row;
   }
 
+  .lg\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .lg\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
+  }
+
+  .lg\:text-left {
+    text-align: left;
+  }
+
+  .lg\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
   }
 }
 
 .dark\:bg-neutral-300:where([data-theme="dark"], [data-theme="dark"] *) {
   --tw-bg-opacity: 1;
   background-color: rgb(212 212 212 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-teal-400:where([data-theme="dark"], [data-theme="dark"] *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 212 191 / var(--tw-bg-opacity));
+}
+
+.dark\:bg-\[url\(\/assets\/images\/hero-dark\.svg\)\]:where([data-theme="dark"], [data-theme="dark"] *) {
+  background-image: url(/assets/images/hero-dark.svg);
+}
+
+.dark\:text-amber-400:where([data-theme="dark"], [data-theme="dark"] *) {
+  --tw-text-opacity: 1;
+  color: rgb(251 191 36 / var(--tw-text-opacity));
+}
+
+.dark\:text-blue-400:where([data-theme="dark"], [data-theme="dark"] *) {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
+.dark\:text-red-400:where([data-theme="dark"], [data-theme="dark"] *) {
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
