--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -1,7 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.text-shadow {
+	--text-shadow: oklch(var(--b1));
+	text-shadow: 
+        /* first layer at 1px */ -1px -1px 0px var(--text-shadow), 0px -1px 0px var(--text-shadow), 1px -1px 0px var(--text-shadow), -1px 0px 0px var(--text-shadow), 1px 0px 0px var(--text-shadow), -1px 1px 0px var(--text-shadow), 0px 1px 0px var(--text-shadow), 1px 1px 0px var(--text-shadow), /* second layer at 2px */ -2px -2px 0px var(--text-shadow), -1px -2px 0px var(--text-shadow), 0px -2px 0px var(--text-shadow), 1px -2px 0px var(--text-shadow), 2px -2px 0px var(--text-shadow), 2px -1px 0px var(--text-shadow), 2px 0px 0px var(--text-shadow), 2px 1px 0px var(--text-shadow), 2px 2px 0px var(--text-shadow), 1px 2px 0px var(--text-shadow), 0px 2px 0px var(--text-shadow), -1px 2px 0px var(--text-shadow), -2px 2px 0px var(--text-shadow), -2px 1px 0px var(--text-shadow), -2px 0px 0px var(--text-shadow), -2px -1px 0px var(--text-shadow);
+}
 @layer components {
+	.splitting .word {
+		animation: slide-in 0.5s cubic-bezier(0.5, 0, 0.5, 1) both;
+		animation-delay: calc(100ms * var(--word-index));
+	}
+	@keyframes slide-in {	
+		from {
+			transform: translateY(1em) scale(1);
+			opacity: 0;
+		}
+	}
 	.container-content {
 		@apply container max-md:p-5 mx-auto my-20;
 	}
@@ -12,10 +27,10 @@
 		@apply btn btn-ghost aria-selected:text-neutral-900 dark:aria-selected:text-neutral-100 aria-selected:bg-slate-950/20 dark:aria-selected:bg-slate-50/10 aria-selected:font-semibold font-medium rounded-sm;
 	}
 	.nav-links {
-		@apply base-links text-base;
+		@apply base-links lg:text-sm text-base;
 	}
 	.drawer-links {
-		@apply base-links m-0 w-full justify-start;
+		@apply base-links m-0 w-full justify-start lg:text-sm text-base;
 	}
 	.section-head {
 		@apply w-full flex flex-col md:px-20 gap-[2px] mb-8;
