--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -11,6 +11,12 @@
 		box-shadow: 6px 6px oklch(var(--bc));
 		@apply outline-base-content;
 	}
+	.card-3-title {
+		@apply w-full gap-2 flex sm:flex-col-reverse justify-between sm:justify-start;
+	}
+	.card-3 {
+		@apply sm:w-1/3 shadow flex min-w-56 w-full sm:max-w-sm flex-col grow rounded p-5 gap-2;
+	}
 	.card-2 {
 		@apply outline-1 outline-base-content/10 outline card min-w-56 max-w-full grow bg-base-100 shadow-xl rounded-md hover:effect-3d hover:translate-x-[-3px] hover:translate-y-[-3px] transition z-10 hover:z-[9];
 	}
